# RustyRAG

./: .env.example  .env.gpu.example  .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  SETUP_VASTAI.md  docker-compose.gpu.yml  docker-compose.h200.yml  docker-compose.rtx5090.yml  docker-compose.yml
docs/: eval_judged.json  eval_results.json
migrations/: 20260210000001_create_users.sql
scripts/: judge_evals.py
services/embeddings/: Dockerfile  main.py  requirements.txt
services/reranker/: Dockerfile  main.py  requirements.txt
src/: config.rs  errors.rs  lib.rs  main.rs  routes.rs
src/competition/: eval_client.rs  mod.rs  prompts.rs  runner.rs  submission.rs
src/db/: mod.rs  models.rs
src/db/repositories/: users.rs
src/handlers/: chat.rs  documents.rs  evals.rs  health.rs  mod.rs  users.rs
src/middleware/: auth.rs  mod.rs
src/prompts/: contextual_prompt.txt  mod.rs  rag_system_prompt.txt
src/schemas/: requests.rs  responses.rs
src/services/: docling.rs  document.rs  embeddings.rs  llm.rs  milvus.rs  mod.rs  password.rs  reranker.rs
static/: chat.html
