[package]
name = "alpharust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization ("Pydantic" equivalent)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }

# Database ORM (async, compile-time checked) — wired up later
# sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Env & Config
dotenvy = "0.15"
envy = "0.4"

# HTTP client (for OpenAI, OpenRouter, etc.)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"
anyhow = "1"
thiserror = "2"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web", "vendored"] }
