[package]
name = "rustyrag"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization ("Pydantic" equivalent)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }

# Env & Config
dotenvy = "0.15"
envy = "0.4"

# HTTP client (for LLM, embeddings, Milvus, etc.)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"
anyhow = "1"
thiserror = "2"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web", "vendored"] }

# Document processing
pdf-extract = "0.7"
zip = "2"
tempfile = "3"
libc = "0.2"
text-splitter = "0.29.3"
